2005-10-09  Bruno Haible  <bruno@clisp.org>
2002-07-24  Ulrich Drepper  <drepper@redhat.com>

	* explodename.c (_nl_find_language, _nl_explode_name): Remove support
	for CEN-style locale variables. It was never used and shouldn't be
	since it's not portable.
	* finddomain.c (_nl_find_domain): Likewise.
	* l10nflist.c (_nl_make_l10nflist): Likewise.
	* loadinfo.h (_nl_make_l10nflist, _nl_explode_name): Likewise.
	(CEN_*, XPG_SPECIFIC): Remove macros.
	(XPG_TERRITORY): Renamed from TERRITORY.

2005-08-28  Bruno Haible  <bruno@clisp.org>

	* libgnuintl.h.in: Add IN_LIBGLOCALE conditional.
	* Makefile.in (libgnuintl.h, libintl.h): Remove the IN_LIBGLOCALE
	conditional.
	* dcigettext.c [IN_LIBGLOCALE]: Include also <libintl.h>, for
	bindtextdomain().

2005-08-25  Bruno Haible  <bruno@clisp.org>

	* libintl.glibc: Update from current glibc.
	* libgnuintl.h.in (_INTL_MAY_RETURN_STRING_ARG): New macro.
	(gettext, dgettext, dcgettext, ngettext, dngettext, dcngettext):

2005-08-21  Bruno Haible  <bruno@clisp.org>

	* lock.h: Add multiple inclusion guard.

2005-08-19  Bruno Haible  <bruno@clisp.org>

	* localealias.c (read_alias_file): In case of failure, close the
	file descriptor and sort the array before returning.

2005-08-19  Bruno Haible  <bruno@clisp.org>

	* localealias.c (read_alias_file) [IN_LIBGLOCALE]: Ignore aliases
	containing an underscore.

2005-07-31  Bruno Haible  <bruno@clisp.org>

	Make code usable in libglocale.
	* gettextP.h (gl_dcigettext): New declaration.
	(_nl_msg_cat_cntr): Export also from libglocale.
	(_nl_find_msg): In libglocale, take the encoding as argument and no
	convert flag.
	* dcigettext.c (HAVE_PER_THREAD_LOCALE): Define in libglocale.
	(struct known_translation_t): In libglocale, add encoding field.
	(transcmp): In libglocale, compare also the encoding fields.
	(libintl_version): Don't define in libglocale.
	(_nl_current_default_domain, _nl_domain_bindings): Likewise.
	(DCIGETTEXT): In libglocale, also take the localename and encoding